# kulupu-ilo

./: .gitignore  Makefile  README.md  pyproject.toml
downloads/: nimi_ku.txt
kulupu_ilo/: parse.py  tokenize.py  toys.py  translate.py  words.py
tests/: test_mora.py  test_names.py  test_reprs.py  test_sounds.py  test_sp_staircase.py  test_syls.py  test_tokenizer.py  test_word_validate.py
tputils/: download.py  process.py  staircase.py  steps.py  tokenize.py  toys.py  validate.py  writing.py
